syntax = "proto3";
package metaTask;
import "metapb.proto";
import "pulse.proto";
option java_package = "org.apache.hugegraph.pd.grpc";

enum TaskType {
  Unknown = 0;
  Split_Partition = 1;
  Change_Shard = 2;
  Move_Partition = 3;
  Clean_Partition = 4;
  Change_KeyRange = 5;
  Build_Index = 6;
  Backup_Graph = 7;
}

// 一条任务信息
message Task {
  uint64 id = 1;
  TaskType type = 2;
  TaskState state = 3;
  int64 start_timestamp = 4;
  metapb.Partition partition = 5;
  string message = 6;
  //每个shard执行的任务状态
  repeated ShardTaskState shardState = 7;
  ChangeShard changeShard = 9;
  SplitPartition splitPartition = 10;
  MovePartition movePartition = 11;
  CleanPartition cleanPartition = 12;
  PartitionKeyRange partitionKeyRange = 13;
  metapb.BuildIndex buildIndex = 14;
}

enum TaskState{
  Task_Unknown = 0;
  Task_Ready = 1;   //任务就绪
  Task_Doing = 2;   //执行中
  Task_Done = 3;    //完成
  Task_Exit = 4;    //退出
  Task_Stop = 10;
  Task_Success = 11;
  Task_Failure = 12;
}

message ShardTaskState{
  uint64 store_id = 1;
  TaskState state = 2;
}

